<resources>
    <string name="app_name">Westmeath Score App</string>
    <string name="gaa">WESTMEATH GAA</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="tag">TAGS OR #TAGS</string>
    <string name="social_title">Social Title</string>
    <string name="tweet_information">TWEET INFORMATION</string>
    <string name="time">TIME</string>
    <string name="menus">-</string>
    <string name="start">START</string>
    <string name="create_message">Share Score</string>
    <string name="reset_message">Reset</string>
    <string name="half_time">Half Time</string>
    <string name="full_time">Full Time</string>
    <string name="first_half">1st Half</string>
    <string name="second_half">2nd Half</string>
    <string name="half">Half</string>
    <string name="st_team">1st TEAM</string>
    <string name="pts">0 pts</string>
    <string name="nd_team">2nd TEAM</string>
    <string name="zero">0</string>

    <string name="tweet_structure">Tweet Structure</string>

    <string name="int_to_textview">%d</string>
    <string name="int_with_string_to_textview">%d %s</string>
    <string name="int_with_int_to_textview">%d:%02d</string>
    <string name="post_message">Post Message</string>

    <string name="result_string_format">%s\n\n%s\n\n%s\n\n%s %s:%s (%s)\n\n%s %s:%s (%s)\n\n%s</string>
    <string name="share">Share</string>


</resources>
